--- a/fantastic-sentence-explorer/MainWindow.xaml
+++ b/fantastic-sentence-explorer/MainWindow.xaml
@@ -5,17 +5,19 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:fantastic_sentence_explorer"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800"
+        WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="3*"/>
-            <ColumnDefinition Width="13*"/>
         </Grid.ColumnDefinitions>
         <ListBox x:Name="FileList" SelectionChanged="FileList_SelectionChanged" />
+        <GridSplitter Width="5"/>
         <Grid Grid.Column="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
+                <ColumnDefinition Width="0.618*"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition/>
@@ -24,7 +26,7 @@
                 <RowDefinition/>
                 <RowDefinition Height="5*"/>
             </Grid.RowDefinitions>
-
+            <GridSplitter Width="5" Grid.Column="0" Grid.RowSpan="4"/>
             <TextBlock FontSize="25" HorizontalAlignment="Center" VerticalAlignment="Center">英文名称</TextBlock>
             <TextBlock FontSize="25" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">中文译名</TextBlock>
             <TextBlock FontSize="25" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center">原名</TextBlock>
