--- a/fantastic-sentence-explorer/MainWindow.xaml
+++ b/fantastic-sentence-explorer/MainWindow.xaml
@@ -12,7 +12,7 @@
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
-        <ListBox x:Name="FileList" SelectionChanged="FileList_SelectionChanged" />
+        <ListBox x:Name="fileList" SelectionChanged="FileList_SelectionChanged" />
         <GridSplitter Width="5"/>
         <Grid Grid.Column="1">
             <Grid.ColumnDefinitions>
@@ -32,18 +32,18 @@
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <Button x:Name="saveButton"  FontSize="25" Margin="30,0" Click="saveButton_Click">保存</Button>
+                <Button x:Name="saveButton"  FontSize="25" Margin="30,0" Click="SaveButton_Click">保存</Button>
             </Grid>
             <GridSplitter Width="5" Grid.Row="1" Grid.RowSpan="4"/>
             <TextBlock FontSize="25" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">英文名称</TextBlock>
             <TextBlock FontSize="25" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center">中文译名</TextBlock>
             <TextBlock FontSize="25" Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center">原名</TextBlock>
             <TextBlock FontSize="25" Grid.Row="4" HorizontalAlignment="Center" VerticalAlignment="Center">Bangumi 链接</TextBlock>
-            <TextBox x:Name="EnglishNameBox" Grid.Column="1" FontSize="15" Grid.Row="1" TextWrapping="WrapWithOverflow">英文名称</TextBox>
-            <TextBox x:Name="ZHTranslationBox" Grid.Column="1" FontSize="15" Grid.Row="2" TextWrapping="WrapWithOverflow">中文译名</TextBox>
-            <TextBox x:Name="NameBox" Grid.Column="1" FontSize="15" Grid.Row="3" TextWrapping="WrapWithOverflow">原名</TextBox>
-            <TextBox x:Name="BangumiUrlBox" Grid.Column="1" FontSize="15" Grid.Row="4" TextWrapping="WrapWithOverflow">Bangumi 链接</TextBox>
-            <DataGrid x:Name="SentenceGrid" Grid.Row="5" Grid.ColumnSpan="2" AutoGenerateColumns="True"/>
+            <TextBox x:Name="englishNameBox" Grid.Column="1" FontSize="15" Grid.Row="1" TextWrapping="WrapWithOverflow">英文名称</TextBox>
+            <TextBox x:Name="zhTranslationBox" Grid.Column="1" FontSize="15" Grid.Row="2" TextWrapping="WrapWithOverflow">中文译名</TextBox>
+            <TextBox x:Name="nameBox" Grid.Column="1" FontSize="15" Grid.Row="3" TextWrapping="WrapWithOverflow">原名</TextBox>
+            <TextBox x:Name="bangumiUrlBox" Grid.Column="1" FontSize="15" Grid.Row="4" TextWrapping="WrapWithOverflow">Bangumi 链接</TextBox>
+            <DataGrid x:Name="sentenceGrid" Grid.Row="5" Grid.ColumnSpan="2" AutoGenerateColumns="True"/>
 
         </Grid>
     </Grid>
