--- a/fantastic-sentence-explorer/MainWindow.xaml
+++ b/fantastic-sentence-explorer/MainWindow.xaml
@@ -6,13 +6,19 @@
         xmlns:local="clr-namespace:fantastic_sentence_explorer"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800"
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterScreen" Closing="Window_Closing">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
-        <ListBox x:Name="fileList" SelectionChanged="FileList_SelectionChanged" />
+        <ListBox x:Name="fileList" SelectionChanged="FileList_SelectionChanged" >
+            <ListBox.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="删除" Click="DeleteFileMenu_Click"/>
+                </ContextMenu>
+            </ListBox.ContextMenu>
+        </ListBox>
         <GridSplitter Width="5"/>
         <Grid Grid.Column="1">
             <Grid.ColumnDefinitions>
@@ -31,18 +37,22 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
+                    <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
                 <Button x:Name="saveButton"  FontSize="25" Margin="30,0" Click="SaveButton_Click">保存</Button>
+                <Button x:Name="addFileButton" Grid.Column="1"  FontSize="25" Margin="30,0" Click="AddButton_Click">添加文件</Button>
+                <Button x:Name="addItemButton" Grid.Column="2"  FontSize="25" Margin="30,0" Click="AddItemButton_Click">添加句子</Button>
+                
             </Grid>
             <GridSplitter Width="5" Grid.Row="1" Grid.RowSpan="4"/>
             <TextBlock FontSize="25" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">英文名称</TextBlock>
             <TextBlock FontSize="25" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center">中文译名</TextBlock>
             <TextBlock FontSize="25" Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center">原名</TextBlock>
             <TextBlock FontSize="25" Grid.Row="4" HorizontalAlignment="Center" VerticalAlignment="Center">Bangumi 链接</TextBlock>
-            <TextBox x:Name="englishNameBox" Grid.Column="1" FontSize="15" Grid.Row="1" TextWrapping="WrapWithOverflow">英文名称</TextBox>
-            <TextBox x:Name="zhTranslationBox" Grid.Column="1" FontSize="15" Grid.Row="2" TextWrapping="WrapWithOverflow">中文译名</TextBox>
-            <TextBox x:Name="nameBox" Grid.Column="1" FontSize="15" Grid.Row="3" TextWrapping="WrapWithOverflow">原名</TextBox>
-            <TextBox x:Name="bangumiUrlBox" Grid.Column="1" FontSize="15" Grid.Row="4" TextWrapping="WrapWithOverflow">Bangumi 链接</TextBox>
+            <TextBox x:Name="englishNameBox" Grid.Column="1" FontSize="15" Grid.Row="1" TextWrapping="WrapWithOverflow" TextChanged="TextBox_TextChanged">英文名称</TextBox>
+            <TextBox x:Name="zhTranslationBox" Grid.Column="1" FontSize="15" Grid.Row="2" TextWrapping="WrapWithOverflow" TextChanged="TextBox_TextChanged">中文译名</TextBox>
+            <TextBox x:Name="nameBox" Grid.Column="1" FontSize="15" Grid.Row="3" TextWrapping="WrapWithOverflow" TextChanged="TextBox_TextChanged">原名</TextBox>
+            <TextBox x:Name="bangumiUrlBox" Grid.Column="1" FontSize="15" Grid.Row="4" TextWrapping="WrapWithOverflow" TextChanged="TextBox_TextChanged">Bangumi 链接</TextBox>
             <DataGrid x:Name="sentenceGrid" Grid.Row="5" Grid.ColumnSpan="2" AutoGenerateColumns="True"/>
 
         </Grid>
