--- a/fantastic-sentence-explorer/MainWindow.xaml
+++ b/fantastic-sentence-explorer/MainWindow.xaml
@@ -8,53 +8,67 @@
         Title="MainWindow" Height="450" Width="800"
         WindowStartupLocation="CenterScreen" Closing="Window_Closing">
     <Grid>
+        <Grid.Resources>
+            <Style TargetType="Button">
+                <Setter Property="FontSize" Value="20"/>
+            </Style>
+        </Grid.Resources>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
-        <ListBox x:Name="fileList" SelectionChanged="FileList_SelectionChanged" >
-            <ListBox.ContextMenu>
-                <ContextMenu>
-                    <MenuItem Header="删除" Click="DeleteFileMenu_Click"/>
-                </ContextMenu>
-            </ListBox.ContextMenu>
-        </ListBox>
-        <GridSplitter Width="5"/>
-        <Grid Grid.Column="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="0.618*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
+        <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition Height="5*"/>
             </Grid.RowDefinitions>
-            <Grid Grid.ColumnSpan="2">
+            <ListBox x:Name="fileList" SelectionChanged="FileList_SelectionChanged" >
+                <ListBox.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Header="删除" Click="DeleteFileMenu_Click"/>
+                    </ContextMenu>
+                </ListBox.ContextMenu>
+            </ListBox>
+        </Grid>
+        <GridSplitter Width="5"/>
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="160"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid Margin="3">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <Button x:Name="saveButton"  FontSize="25" Margin="30,0" Click="SaveButton_Click">保存</Button>
-                <Button x:Name="addFileButton" Grid.Column="1"  FontSize="25" Margin="30,0" Click="AddButton_Click">添加文件</Button>
-                <Button x:Name="addItemButton" Grid.Column="2"  FontSize="25" Margin="30,0" Click="AddItemButton_Click">添加句子</Button>
-                
+                <Button x:Name="saveButton" Margin="30,0" Click="SaveButton_Click" Content="保存(_S)"/>
+                <Button x:Name="addFileButton" Grid.Column="1" Margin="30,0" Height="40" Click="AddButton_Click" Content="添加文件(_F)"/>
+                <Button x:Name="addItemButton" Grid.Column="2" Margin="30,0" Click="AddItemButton_Click" Content="添加句子(_S)"/>
             </Grid>
-            <GridSplitter Width="5" Grid.Row="1" Grid.RowSpan="4"/>
-            <TextBlock FontSize="25" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">英文名称</TextBlock>
-            <TextBlock FontSize="25" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center">中文译名</TextBlock>
-            <TextBlock FontSize="25" Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center">原名</TextBlock>
-            <TextBlock FontSize="25" Grid.Row="4" HorizontalAlignment="Center" VerticalAlignment="Center">Bangumi 链接</TextBlock>
-            <TextBox x:Name="englishNameBox" Grid.Column="1" FontSize="15" Grid.Row="1" TextWrapping="WrapWithOverflow" TextChanged="TextBox_TextChanged">英文名称</TextBox>
-            <TextBox x:Name="zhTranslationBox" Grid.Column="1" FontSize="15" Grid.Row="2" TextWrapping="WrapWithOverflow" TextChanged="TextBox_TextChanged">中文译名</TextBox>
-            <TextBox x:Name="nameBox" Grid.Column="1" FontSize="15" Grid.Row="3" TextWrapping="WrapWithOverflow" TextChanged="TextBox_TextChanged">原名</TextBox>
-            <TextBox x:Name="bangumiUrlBox" Grid.Column="1" FontSize="15" Grid.Row="4" TextWrapping="WrapWithOverflow" TextChanged="TextBox_TextChanged">Bangumi 链接</TextBox>
-            <DataGrid x:Name="sentenceGrid" Grid.Row="5" Grid.ColumnSpan="2" AutoGenerateColumns="True"/>
-
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="0.618*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <GridSplitter Width="5" Grid.Row="0" Grid.RowSpan="4"/>
+                <TextBlock FontSize="25" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center">英文名称</TextBlock>
+                <TextBlock FontSize="25" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">中文译名</TextBlock>
+                <TextBlock FontSize="25" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center">原名</TextBlock>
+                <TextBlock FontSize="25" Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center">Bangumi 链接</TextBlock>
+                <TextBox x:Name="englishNameBox" Grid.Column="1" FontSize="15" Grid.Row="0" TextWrapping="WrapWithOverflow" TextChanged="TextBox_TextChanged">英文名称</TextBox>
+                <TextBox x:Name="zhTranslationBox" Grid.Column="1" FontSize="15" Grid.Row="1" TextWrapping="WrapWithOverflow" TextChanged="TextBox_TextChanged">中文译名</TextBox>
+                <TextBox x:Name="nameBox" Grid.Column="1" FontSize="15" Grid.Row="2" TextWrapping="WrapWithOverflow" TextChanged="TextBox_TextChanged">原名</TextBox>
+                <TextBox x:Name="bangumiUrlBox" Grid.Column="1" FontSize="15" Grid.Row="3" TextWrapping="WrapWithOverflow" TextChanged="TextBox_TextChanged">Bangumi 链接</TextBox>
+            </Grid>
+            <GridSplitter Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="5"/>
+            <DataGrid x:Name="sentenceGrid" Grid.Row="5" Grid.ColumnSpan="2" AutoGenerateColumns="True" Margin="0,5,0,0"/>
         </Grid>
     </Grid>
 </Window>
