--- a/fantastic-sentence-explorer/MainWindow.xaml
+++ b/fantastic-sentence-explorer/MainWindow.xaml
@@ -33,7 +33,7 @@
                 </StackPanel.Resources>
                 <Button x:Name="saveButton" Click="SaveButton_Click" Content="保存(_S)"/>
                 <Button x:Name="addFileButton" Grid.Column="1" Height="40" Click="AddButton_Click" Content="添加文件(_F)"/>
-                <Button x:Name="addItemButton" Grid.Column="2" Click="AddItemButton_Click" Content="添加句子(_S)"/>
+                <Button x:Name="addItemButton" Grid.Column="2" Click="AddItemButton_Click" Content="添加句子(_T)"/>
             </StackPanel>
         </Grid>
         <Grid Grid.Row="1">
